# streamer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.hpp  CMakeLists.txt  CvBinaryModel.cpp  CvBinaryModel.hpp  CvImageLoaderModel.cpp  CvImageLoaderModel.hpp  CvImageShowModel.cpp  CvImageShowModel.hpp  CvMorphModel.cpp  CvMorphModel.hpp  CvRGB2GrayModel.cpp  CvRGB2GrayModel.hpp  DivisionModel.hpp  ImageData.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.hpp  NumberSourceDataModel.hpp  SubtractionModel.hpp  Utils.cpp  Utils.hpp  main.cpp
examples/connection_colors/: models.hpp
examples/styles/: main.cpp
examples/text/: TextSourceDataModel.cpp
include/CvModels/: CvBinaryModel.hpp  CvBlurModel.hpp  CvDistanceTransformModel.hpp  CvDrawContoursModel.hpp  CvEdgeModel.hpp  CvExtractContoursModel.hpp  CvFilter2dModel.hpp  CvFindContoursModel.hpp  CvGaussianBlurModel.hpp  CvImageLoaderModel.hpp  CvImageShowModel.hpp  CvMedianBlurModel.hpp  CvModel.hpp  CvMorphModel.hpp  CvPointCloudApproximateVoxelFilterModel.hpp  CvPointCloudDownsampleVoxelGridModel.hpp  CvPointCloudFPFHEstimationOMPModel.hpp  CvPointCloudICPModel.hpp  CvPointCloudLoaderModel.hpp  CvPointCloudNDTModel.hpp  CvPointCloudNormalEstimationModel.hpp  CvPointCloudNormalEstimationOMPModel.hpp  CvPointCloudPassThroughModel.hpp  CvPointCloudSampleConsensusModel.hpp  CvPointCloudSampleConsensusPrerejectiveModel.hpp  CvPointCloudStatisticalOutlierRemovalModel.hpp  CvPointCloudTransformModel.hpp  CvPointIaRansacModel.hpp  CvRGB2GrayModel.hpp  CvShapeBaseDetectorModel.hpp  CvShapeBaseMatchModel.hpp
include/DataTypes/: ContoursData.hpp  FPFHSignature33Data.hpp  ImageData.hpp  Matrix4fData.hpp  NormalData.hpp  PointCloudData.hpp  ResultData.hpp  StringData.hpp
include/GeneralModels/: AdditionModel.hpp  DivisionModel.hpp  ImageLoaderModel.hpp  MakeMat4fModel.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.hpp  ResultShowerModel.hpp  SubtractionModel.hpp
include/Line2Dup/: line2Dup.h  line2Dup.hpp
include/QtNodes/internal/: NodeDelegateModel.hpp
include/Utils/: Utils.hpp
include/Widget/: Full2DDialog.h  Full2DDialog.ui  LoadingDialog.h  MyGraphicsView.h  PCViewer.h  PCViewer.ui  ShapeBaseTrainer.h  ShapeBaseTrainer.ui  StreamerMainWindow.hpp  StreamerMainWindow.ui  ui_Full2DDialog.h  ui_PCViewer.h  ui_ShapeBaseTrainer.h  ui_StreamerMainWindow.h
resources/: resources.qrc
src/: DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp
src/CvModels/: CvBinaryModel.cpp  CvBlurModel.cpp  CvDistanceTransformModel.cpp  CvDrawContoursModel.cpp  CvEdgeModel.cpp  CvExtractContoursModel.cpp  CvFilter2dModel.cpp  CvFindContoursModel.cpp  CvGaussianBlurModel.cpp  CvImageLoaderModel.cpp  CvImageShowModel.cpp  CvMedianBlurModel.cpp  CvModel.cpp  CvMorphModel.cpp  CvPointCloudApproximateVoxelFilterModel.cpp  CvPointCloudDownsampleVoxelGridModel.cpp  CvPointCloudFPFHEstimationOMPModel.cpp  CvPointCloudICPModel.cpp  CvPointCloudIaRansacModel.cpp  CvPointCloudLoaderModel.cpp  CvPointCloudNDTModel.cpp  CvPointCloudNormalEstimationModel.cpp  CvPointCloudNormalEstimationOMPModel.cpp  CvPointCloudPassThroughModel.cpp  CvPointCloudSampleConsensusModel.cpp  CvPointCloudSampleConsensusPrerejectiveModel.cpp  CvPointCloudStatisticalOutlierRemovalModel.cpp  CvPointCloudTransformModel.cpp  CvRGB2GrayModel.cpp  CvShapeBaseDetectorModel.cpp  CvShapeBaseMatchModel.cpp
src/GeneralModels/: ImageLoaderModel.cpp  ImageShowModel.cpp  MakeMat4fModel.cpp  MathOperationDataModel.cpp  NumberDisplayDataModel.cpp  NumberSourceDataModel.cpp  ResultShowerModel.cpp
src/Line2Dup/: line2Dup.cpp
src/QtNodes/: AbstractGraphModel.cpp  GraphicsView.cpp  NodeDelegateModel.cpp
src/Utils/: Utils.cpp
src/Widget/: Full2DDialog.cpp  LoadingDialog.cpp  MyGraphicsView.cpp  PCViewer.cpp  ShapeBaseTrainer.cpp  StreamerMainWindow.cpp
test/: CMakeLists.txt
